--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="it">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Descrione personale</title>
+        <link rel="stylesheet" type="text/css" href="./css/common.css" />
     </head>
     <body>
-        
+        <header>
+
+        </header>
+        <main>
+            
+        </main>
     </body>
 </html>
