--- a/index.html
+++ b/index.html
@@ -1,9 +1,70 @@
 <!DOCTYPE html>
 <html lang="it">
     <head>
-        <p>Ciao Jaki</p>
+        <meta charset="UTF-8">
+        <title>Il mio sito</title>
     </head>
     <body>
-        
+        <header>
+            <h1>Recensioni Logitech</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">MX Keys S</a>
+                <a href="#">MX Master 3S</a>
+                <a href="#">Combo MX Keys + MX Master</a>
+                <a href="#">Contatti</a>
+            </nav>
+            <section id="hero">
+                <h2>Benvenuto sul sito di recensioni Logitech</h2>
+                <p>Scopri la tastiera Logitech Logitech MX Keys S e il mouse in combo Logitech MX Master 3S</p>
+            </section>
+        </header>
+        <main>
+            <section id="prodotti-in-evidenza">
+                <h2>Prodotti in evidenza</h2>
+
+                <div class="prodotto">
+                    <h3>Logitech MX Keys S</h3>
+                    <a href="https://www.amazon.it/Logitech-Digitazione-Programmabili-Retroilluminazione-Ricaricabile/dp/B07W8P53H7/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2XH7TT40Q7YG2&dib=eyJ2IjoiMSJ9.6EkXOq0g5iWE99dShQTB4KZrrEdWYIZGcRGJDxJH70JAj4FmwIRxP2dYYmFu6fHYVbRa1aRhWJVwlTTNGCFev9AyuBBN8tJNnhJXcprSrzJy_EnYOoSH6WrLNqWk52wnwgm8sqQcx3gPS407LNoUPRVfVrXTIIRSd0F7yMkTzvmIn-a7cnFVdUi5qOrYRFMKHPSil39Jd2Na4DiiLMNQu1j_8pAnRl5kJtjLza8ZQLLsFk5B6zcgp0uqL6vS069bb4YQnFUoBvhtcrADHhduyEG8r4PGrlf3Kk65LYw6bcA.281LUU-E0BhmxUSMS0hlVh-7nYSMCtEwQ7lv1JMaC6s&dib_tag=se&keywords=logitech+keys+s&qid=1770413819&sprefix=logiteck+keys+s%2Caps%2C261&sr=8-1&ufe=app_do%3Aamzn1.fos.fca66a76-6518-40f2-959f-2dca30e9c5d1">
+                        <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SX425_.jpg" alt="Logitech MX Keys S" width="200">
+                    </a>
+                    <p>Tastiera retroilluminata Logitech MX Keys S, ideale per scrivere e programmare.</p>
+                    <a href="logitech-mx-keys-s.html">Leggi la recensione</a>
+                </div>
+
+                <div class="prodotto">
+                    <h3>Logitech MX Master 3S</h3>
+                    <a href="https://www.amazon.it/Logitech-Master-2025-prestazioni-tracciamento/dp/B0FHHV6YR5/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1GX3FVII2IGG2&dib=eyJ2IjoiMSJ9.M1qMyOextINfKueq1McTRPG7RPDmA8VqFWmay0FZLtZZbn4Wg_cisPcOghBbYlCXDiz_5IeNX12fGhMG2SHwWogak2y81kyz6_xm0jV9KZPIaipAzZKZcuWH6ZeYOOnNm1Vx05P4MtYkiG750rJe7ZXR-xRf0atfMBVOM9-9ViIPZbVgdBJ5RGXGmRCFJX2EbaRM_QrvnDf5583b7BXDRndMrYmpSkZKqRFjWfF4GrlyL0-Qm-jw3ALU5FfLPoWrum6_HqerUwFVXfMDFq6S6Pwpx1zf0aJnhMXDBFjbd1w.y2v0GNRA9Ar8AB76W-whDlQYY_HpB2mozFJGpHGTdeI&dib_tag=se&keywords=logitech%2Bmouse&qid=1770413924&sprefix=logitech%2Bmouse%2Caps%2C252&sr=8-1&ufe=app_do%3Aamzn1.fos.fca66a76-6518-40f2-959f-2dca30e9c5d1&th=1">
+                        <img src="https://m.media-amazon.com/images/I/618IJzC-fFL._AC_SX425_.jpg" alt="Logitech MX Master 3S" width="200">
+                    </a>
+                    <p>Mouse ergonomico Logitech MX Master 3S, perfetto per lavoro e creatività.</p>
+                    <a href="logitech-mx-master-3s.html">Leggi la recensione</a>
+                </div>
+            </section>
+            <section id="perche-logitech">
+                <h2>Perché scegliere Logitech</h2>
+                <ul>
+                    <li>Prodotti di qualità, affidabili e durevoli</li>
+                    <li>Perfetti per lavoro, studio e creatività</li>
+                    <li>Design ergonomico e funzionalità avanzate</li>
+                </ul>
+            </section>
+            <section id="guide">
+                <h2>Guide e articoli recenti</h2>
+                <ul>
+                    <li><a href="logitech-mx-keys-s.html">Recensione Logitech MX Keys S</a></li>
+                    <li><a href="logitech-mx-master-3s.html">Recensione Logitech MX Master 3S</a></li>
+                    <li><a href="guida-combo.html">MX Keys + MX Master: la combo perfetta</a></li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2026 Recensioni Logitech</p>
+            <p>
+                <a href="#">Disclosure Amazon Affiliates</a> | 
+                <a href="#">Privacy Policy</a> | 
+                <a href="contatti.html">Contatti</a>
+            </p>
+        </footer>
     </body>
 </html>
