--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
         <meta charset="UTF-8">
         <title>Il mio sito</title>
     </head>
+    <script src="https://eugenioguidi.github.io/js/header-nav.js"></script>
     <body>
         <header>
             <h1>Recensioni Logitech</h1>
             <div id="header-nav"></div>
-            <script>
-                document.addEventListener("DOMContentLoaded", () => {
-                    fetch("https://eugenioguidi.github.io/header-nav.html").then(r => r.text()).then(html => {
-                        document.getElementById("header-nav").innerHTML = html;
-                    }).catch(err => console.error("Errore header:", err));
-                });
-            </script>
             <section id="hero">
                 <h2>Benvenuto sul sito di recensioni Logitech</h2>
                 <p>Scopri la tastiera Logitech Logitech MX Keys S e il mouse in combo Logitech MX Master 3S</p>
