add dimension to logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
         <header>
-            <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo">
+            <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" width="200" />
             <h1>Recensioni Logitech</h1>
             <div id="header-nav"></div>
             <section id="hero">
