add contact email

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
         <header>
-            <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" id="logo" width="200" />
-            <h1>Recensioni Logitech</h1>
+            <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="200" id="logo" />
             <div id="header-nav"></div>
+            <h1>Benvenuto su LogiTechie</h1>
             <section id="hero">
-                <h2>Benvenuto sul sito di recensioni Logitech</h2>
-                <p>Scopri la tastiera Logitech Logitech MX Keys S e il mouse in combo Logitech MX Master 3S</p>
+                <p>Benvenuto sul sito di recensioni di prodotti Logitech</p>
+                <p>Su LogiTechie troverai recensioni dettagliate e guide sui prodotti Logitech, tra cui tastiere, mouse e periferiche per lavoro, studio e gaming. Usa il menu in alto per navigare alle recensioni dei singoli prodotti.</p>
             </section>
         </header>
         <main>
-            <section id="prodotti-in-evidenza">
+            <!-- <section id="prodotti-in-evidenza">
                 <h2>Prodotti in evidenza</h2>
 
                 <div class="prodotto">
@@ -36,7 +36,7 @@
                     <p>Mouse ergonomico Logitech MX Master 3S, perfetto per lavoro e creatività.</p>
                     <a href="logitech-mx-master-3s.html">Leggi la recensione</a>
                 </div>
-            </section>
+            </section> -->
             <section id="perche-logitech">
                 <h2>Perché scegliere Logitech</h2>
                 <ul>
@@ -45,21 +45,12 @@
                     <li>Design ergonomico e funzionalità avanzate</li>
                 </ul>
             </section>
-            <section id="guide">
-                <h2>Guide e articoli recenti</h2>
-                <ul>
-                    <li><a href="logitech-mx-keys-s.html">Recensione Logitech MX Keys S</a></li>
-                    <li><a href="logitech-mx-master-3s.html">Recensione Logitech MX Master 3S</a></li>
-                    <li><a href="guida-combo.html">MX Keys + MX Master: la combo perfetta</a></li>
-                </ul>
-            </section>
         </main>
         <footer>
             <p>&copy; 2026 Recensioni Logitech</p>
             <p>
                 <a href="#">Disclosure Amazon Affiliates</a> | 
-                <a href="#">Privacy Policy</a> | 
-                <a href="contatti.html">Contatti</a>
+                <a href="#">Privacy Policy</a>
             </p>
         </footer>
         <!-- Default Statcounter code for Recensioni Logitech https://eugenioguidi.github.io 
@@ -78,5 +69,9 @@
             </div>
         </noscript>-->
         <!-- End of Statcounter Code -->
+        <section id="contatti">
+            <h2>Contattaci</h2>
+            <p>Hai domande o suggerimenti? Scrivici tramite il modulo sottostante o inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
+        </section>
     </body>
 </html>
