--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
         <header>
-            <img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="200" id="logo" />
+            <a><img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="200" id="logo" /></a>
             <div id="header-nav"></div>
             <h1>Benvenuto su LogiTechie</h1>
             <section id="hero">
@@ -71,7 +71,7 @@
         <!-- End of Statcounter Code -->
         <section id="contatti">
             <h2>Contattaci</h2>
-            <p>Hai domande o suggerimenti? Scrivici tramite il modulo sottostante o inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
+            <p>Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
         </section>
     </body>
 </html>
