modify link to home in logo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
         <header>
-            <a><img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="200" id="logo" /></a>
+            <a href="https://eugenioguidi.github.io"><img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="200" id="logo" /></a>
             <div id="header-nav"></div>
             <h1>Benvenuto su LogiTechie</h1>
             <section id="hero">
