add file logitech-mx-keys-s.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
     <head>
         <meta charset="UTF-8">
-        <title>Il mio sito</title>
+        <title>Home - LogiTechi</title>
     </head>
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
