reactive snippet for Statcounter

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#">Privacy Policy</a>
             </p>
         </footer>
-        <!-- Default Statcounter code for Recensioni Logitech https://eugenioguidi.github.io 
+        <!-- Default Statcounter code for Recensioni Logitech https://eugenioguidi.github.io -->
         <script type="text/javascript">
             var sc_project=13203834; 
             var sc_invisible=1; 
@@ -67,7 +67,7 @@
                     <img class="statcounter" src="https://c.statcounter.com/13203829/0/87f0182f/1/" alt="Web Analytics Made Easy - Statcounter" referrerPolicy="no-referrer-when-downgrade">
                 </a>
             </div>
-        </noscript>-->
+        </noscript>
         <!-- End of Statcounter Code -->
         <section id="contatti">
             <h2>Contattaci</h2>
