add head to file logitech-mx-keys-s.html

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="UTF-8">
+        <title>Home - LogiTechi</title>
     </head>
+    <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
         
     </body>
