add header to file logitech-mx-keys-s.html

--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
             </div>
         </noscript>
         <!-- End of Statcounter Code -->
-        <section id="contatti">
-            <h2>Contattaci</h2>
-            <p>Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
-        </section>
+        <footer>
+            <section id="contatti">
+                <h2>Contattaci</h2>
+                <p>Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
+            </section>
+        </footer>
     </body>
 </html>
