--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -6,6 +6,18 @@
     </head>
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
-        
+        <header>
+            <a href="https://eugenioguidi.github.io"><img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="200" id="logo" /></a>
+            <div id="header-nav"></div>
+            <h1>Recensione Logitech mx keys s tastiera wireless</h1>
+        </header>
     </body>
+    <main>
+        <footer>
+            <section id="contatti">
+                <h2>Contattaci</h2>
+                <p>Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
+            </section>
+        </footer>
+    </main>
 </html>
