add file footer.js

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -14,10 +14,7 @@
     </body>
     <main>
         <footer>
-            <section id="contatti">
-                <h2>Contattaci</h2>
-                <p>Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
-            </section>
+            <div id="footer"></div>
         </footer>
     </main>
 </html>
