--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
         </noscript>
         <!-- End of Statcounter Code -->
         <footer>
-            <section id="contatti">
-                <h2>Contattaci</h2>
-                <p>Hai domande o suggerimenti? Inviaci un'email a <a href="mailto:logitechie@outlook.it">logitechie@outlook.it</a>.</p>
-            </section>
+            <div id="footer"></div>
         </footer>
     </body>
 </html>
