--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Home - LogiTechi</title>
+        <title>Recensione Logitech MX Keys S - LogiTechie</title>
     </head>
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
@@ -16,5 +16,20 @@
         <footer>
             <div id="footer"></div>
         </footer>
+        <!-- Default Statcounter code for Recensione Logitech mx keys s https://eugenioguidi.github.io/logitech-mx-keys-s.html -->
+        <script type="text/javascript">
+            var sc_project=13204058; 
+            var sc_invisible=1; 
+            var sc_security="648c1e02"; 
+        </script>
+        <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
+        <noscript>
+            <div class="statcounter">
+                <a title="Web Analytics" href="https://statcounter.com/" target="_blank">
+                    <img class="statcounter" src="https://c.statcounter.com/13204058/0/648c1e02/1/" alt="Web Analytics" referrerPolicy="no-referrer-when-downgrade">
+                </a>
+            </div>
+        </noscript>
+        <!-- End of Statcounter Code -->
     </main>
 </html>
