--- a/logitech-mx-master-3s.html
+++ b/logitech-mx-master-3s.html
@@ -2,31 +2,31 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Recensione Logitech MX Keys S - LogiTechie</title>
+        <title>Recensione Logitech MX Master 3s - LogiTechie</title>
     </head>
     <script src="https://eugenioguidi.github.io/js/header-nav.js" defer></script>
     <body>
         <header>
             <a href="https://eugenioguidi.github.io"><img src="https://eugenioguidi.github.io/uploads/static/icons/LogiTechi-logo.png" alt="LogiTechie Logo" width="300" id="logo" /></a>
             <div id="header-nav"></div>
-            <h1>Recensione tastiera wireless Logitech MX Keys S</h1>
+            <h1>Recensione mouse wireless Logitech MX Master 3s</h1>
         </header>
     </body>
     <main>
         <section>
             <div class="prodotto">
-                <a href="https://www.amazon.it/Logitech-Digitazione-Programmabili-Retroilluminazione-Ricaricabile/dp/B07W8P53H7/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2XH7TT40Q7YG2&dib=eyJ2IjoiMSJ9.6EkXOq0g5iWE99dShQTB4KZrrEdWYIZGcRGJDxJH70JAj4FmwIRxP2dYYmFu6fHYVbRa1aRhWJVwlTTNGCFev9AyuBBN8tJNnhJXcprSrzJy_EnYOoSH6WrLNqWk52wnwgm8sqQcx3gPS407LNoUPRVfVrXTIIRSd0F7yMkTzvmIn-a7cnFVdUi5qOrYRFMKHPSil39Jd2Na4DiiLMNQu1j_8pAnRl5kJtjLza8ZQLLsFk5B6zcgp0uqL6vS069bb4YQnFUoBvhtcrADHhduyEG8r4PGrlf3Kk65LYw6bcA.281LUU-E0BhmxUSMS0hlVh-7nYSMCtEwQ7lv1JMaC6s&dib_tag=se&keywords=logitech+keys+s&qid=1770413819&sprefix=logiteck+keys+s%2Caps%2C261&sr=8-1&ufe=app_do%3Aamzn1.fos.fca66a76-6518-40f2-959f-2dca30e9c5d1">
-                    <img src="https://m.media-amazon.com/images/I/71g1gu7Cd6L._AC_SL1500_.jpg" alt="Logitech MX Keys S" width="300">
+                <a href="https://www.amazon.it/Logitech-Master-2025-prestazioni-tracciamento/dp/B0FHHV6YR5/ref=sr_1_1?__mk_it_IT=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1GX3FVII2IGG2&dib=eyJ2IjoiMSJ9.M1qMyOextINfKueq1McTRPG7RPDmA8VqFWmay0FZLtZZbn4Wg_cisPcOghBbYlCXDiz_5IeNX12fGhMG2SHwWogak2y81kyz6_xm0jV9KZPIaipAzZKZcuWH6ZeYOOnNm1Vx05P4MtYkiG750rJe7ZXR-xRf0atfMBVOM9-9ViIPZbVgdBJ5RGXGmRCFJX2EbaRM_QrvnDf5583b7BXDRndMrYmpSkZKqRFjWfF4GrlyL0-Qm-jw3ALU5FfLPoWrum6_HqerUwFVXfMDFq6S6Pwpx1zf0aJnhMXDBFjbd1w.y2v0GNRA9Ar8AB76W-whDlQYY_HpB2mozFJGpHGTdeI&dib_tag=se&keywords=logitech%2Bmouse&qid=1770413924&sprefix=logitech%2Bmouse%2Caps%2C252&sr=8-1&ufe=app_do%3Aamzn1.fos.fca66a76-6518-40f2-959f-2dca30e9c5d1&th=1">
+                    <img src="https://m.media-amazon.com/images/I/618IJzC-fFL._AC_SL1500_.jpg" alt="Logitech MX Master 3S" width="300">
                 </a>
-                <p>Tastiera retroilluminata Logitech MX Keys S, ideale per scrivere e programmare.</p>
-                <a href="logitech-mx-keys-s.html">Leggi la recensione</a>
+                <p>Mouse ergonomico Logitech MX Master 3S, perfetto per lavoro e creatività.</p>
+                <a href="logitech-mx-master-3s.html">Leggi la recensione</a>
             </div>
             <p>Recensito a febbraio 2026</p>
         </section>
         <footer>
             <div id="footer"></div>
         </footer>
-        <!-- Default Statcounter code for Recensione Logitech mx keys s https://eugenioguidi.github.io/logitech-mx-keys-s.html -->
+        <!-- Default Statcounter code for Recensione Logitech mx keys s https://eugenioguidi.github.io/logitech-mx-keys-s.html 
         <script type="text/javascript">
             var sc_project=13204058; 
             var sc_invisible=1; 
@@ -39,7 +39,7 @@
                     <img class="statcounter" src="https://c.statcounter.com/13204058/0/648c1e02/1/" alt="Web Analytics" referrerPolicy="no-referrer-when-downgrade">
                 </a>
             </div>
-        </noscript>
+        </noscript>-->
         <!-- End of Statcounter Code -->
     </main>
 </html>
