add snippet to logitech-mx-master-3s.html for click counting

--- a/logitech-mx-master-3s.html
+++ b/logitech-mx-master-3s.html
@@ -25,20 +25,20 @@
         <footer>
             <div id="footer"></div>
         </footer>
-        <!-- Default Statcounter code for Recensione Logitech mx keys s https://eugenioguidi.github.io/logitech-mx-keys-s.html 
+        <!-- Default Statcounter code for Recensione Logitech mx master 3s https://eugenioguidi.github.io/logitech-mx-master-3s.html -->
         <script type="text/javascript">
-            var sc_project=13204058; 
+            var sc_project=13204077; 
             var sc_invisible=1; 
-            var sc_security="648c1e02"; 
+            var sc_security="e2f07b5f"; 
         </script>
         <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
         <noscript>
             <div class="statcounter">
                 <a title="Web Analytics" href="https://statcounter.com/" target="_blank">
-                    <img class="statcounter" src="https://c.statcounter.com/13204058/0/648c1e02/1/" alt="Web Analytics" referrerPolicy="no-referrer-when-downgrade">
+                    <img class="statcounter" src="https://c.statcounter.com/13204077/0/e2f07b5f/1/" alt="Web Analytics" referrerPolicy="no-referrer-when-downgrade">
                 </a>
             </div>
-        </noscript>-->
+        </noscript>
         <!-- End of Statcounter Code -->
     </main>
 </html>
