add sectio INTRODUZIONE in file logitech-mx-keys-s.html

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -30,6 +30,14 @@
                     <p class="data">Recensito a febbraio 2026</p>
                 </section>
 
+                <!-- INTRODUZIONE -->
+                <section id="introduzione">
+                    <h2>Introduzione</h2>
+                    <p>
+                        La Logitech MX Keys S è una tastiera pensata chiaramente per chi lavora molte ore al computer.
+                        Non nasce per il gaming estremo, ma per produttività, scrittura, programmazione e uso quotidiano intenso.
+                    </p>
+                </section>
             </article>
 
         </main>
