add section A CHI E ADATTA in file logitech-mx-keys-s.html

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -38,6 +38,29 @@
                         Non nasce per il gaming estremo, ma per produttività, scrittura, programmazione e uso quotidiano intenso.
                     </p>
                 </section>
+
+                <!-- A CHI E ADATTA -->
+                <section>
+                    <h2>A chi è adatta (e a chi no)</h2>
+
+                    <h3>Adatta a:</h3>
+                    <ul>
+                        <li>Chi lavora al PC per molte ore al giorno</li>
+                        <li>Studenti universitari</li>
+                        <li>Programmatori, scrittori, impiegati, smart worker</li>
+                        <li>Chi cerca una digitazione silenziosa e confortevole</li>
+                    </ul>
+
+                    <h3>Non ideale per:</h3>
+                    <ul>
+                        <li>Chi cerca una tastiera meccanica da gaming</li>
+                        <li>Chi vuole spendere il minimo possibile</li>
+                        <li>Chi preferisce tasti molto alti e rumorosi</li>
+                    </ul>
+                </section>
+
+
+                
             </article>
 
         </main>
