add section ESPERIENZA in logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -48,7 +48,7 @@
                         <li>Chi lavora al PC per molte ore al giorno</li>
                         <li>Studenti universitari</li>
                         <li>Programmatori, scrittori, impiegati, smart worker</li>
-                        <li>Chi cerca una digitazione silenziosa e confortevole</li>
+                        <li>Chi cerca una digitazione silenziosa e confortevole, rapida e precisa</li>
                     </ul>
 
                     <h3>Non ideale per:</h3>
@@ -59,8 +59,14 @@
                     </ul>
                 </section>
 
+                <!-- ESPERIENZA -->
+                <section id="esperienza-uso">
+                    <h2>Esperienza di uso quotidiana</h2>
+                    <p>I tasti sono leggermente concavi, ben distanziati e con una corsa corta ma precisa.</p>
+                    <p>Dopo diverse ore di utilizzo, la tastiera risulta molto confortevole e non affatica le mani.</p>
+                    <p>La retroilluminazione si attiva automaticamente e si adatta alla luce ambientale.</p>
+                </section>
 
-                
             </article>
 
         </main>
