add section DESIGN in logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -67,6 +67,18 @@
                     <p>La retroilluminazione si attiva automaticamente e si adatta alla luce ambientale.</p>
                 </section>
 
+                <!-- DESIGN -->
+                <section id="design">
+                    <h2>Qualità costruttiva e design</h2>
+                    <p>Struttura solida, stabile e design minimal professionale.</p>
+                </section>
+
+                <!-- CONNESSIONE -->
+                <section id="connessione">
+                    <h2>Connessione e compatibilità</h2>
+                    <p>Wireless stabile via Bluetooth o ricevitore Logitech. Supporta più dispositivi.</p>
+                </section>
+
             </article>
 
         </main>
