add section BATTERIA in logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -78,6 +78,13 @@
                     <h2>Connessione e compatibilità</h2>
                     <p>Wireless stabile via Bluetooth o ricevitore Logitech. Supporta più dispositivi.</p>
                 </section>
+
+                <!-- BATTERIA -->
+                <section id="batteria">
+                    <h2>Autonomia della batteria</h2>
+                    <p>Dura settimane con uso normale. Ricarica USB-C veloce.</p>
+                </section>
+
             </article>
 
         </main>
