add section PRO CONTRO in logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -85,6 +85,24 @@
                     <p>Dura settimane con uso normale. Ricarica USB-C veloce.</p>
                 </section>
 
+                <!-- PRO CONTRO -->
+                <section id="pro-contro">
+                    <h2>Pro e Contro</h2>
+
+                    <h3>Pro</h3>
+                    <ul>
+                        <li>Digitazione comoda e silenziosa</li>
+                        <li>Ottima qualità costruttiva</li>
+                        <li>Batteria lunga durata</li>
+                    </ul>
+
+                    <h3>Contro</h3>
+                    <ul>
+                        <li>Prezzo non basso</li>
+                        <li>Non adatta al gaming</li>
+                    </ul>
+                </section>
+
             </article>
 
         </main>
