add section CONCLUSIONI in logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -103,6 +103,15 @@
                     </ul>
                 </section>
 
+                <!-- CONCLUSIONI -->
+                <section id="conclusioni">
+                    <h2>Considerazioni finali</h2>
+                    <p>
+                        Ottima tastiera da produttività per chi scrive molte ore.
+                        Punta su comfort e affidabilità più che su gaming.
+                    </p>
+                </section>
+
             </article>
 
         </main>
