modify content of logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -40,49 +40,22 @@
                 </section>
 
                 <!-- A CHI E ADATTA -->
-                <section>
+                <section id="a-chi-e-adatta">
                     <h2>A chi è adatta (e a chi no)</h2>
 
-                    <h3>Adatta a:</h3>
+                    <h3>A chi è consigliata</h3>
                     <ul>
-                        <li>Chi lavora al PC per molte ore al giorno</li>
-                        <li>Studenti universitari</li>
-                        <li>Programmatori, scrittori, impiegati, smart worker</li>
-                        <li>Chi cerca una digitazione silenziosa e confortevole, rapida e precisa</li>
+                        <li>lavori/studi al PC molte ore</li>
+                        <li>vuoi scrivere comodo e silenzioso</li>
+                        <li>preferisci feeling tipo laptop</li>
                     </ul>
 
-                    <h3>Non ideale per:</h3>
+                    <h3>A chi NON è consigliata:</h3>
                     <ul>
-                        <li>Chi cerca una tastiera meccanica da gaming</li>
-                        <li>Chi vuole spendere il minimo possibile</li>
-                        <li>Chi preferisce tasti molto alti e rumorosi</li>
+                        <li>vuoi feedback meccanico</li>
+                        <li>gaming competitivo</li>
+                        <li>budget basso</li>
                     </ul>
-                </section>
-
-                <!-- ESPERIENZA -->
-                <section id="esperienza-uso">
-                    <h2>Esperienza di uso quotidiana</h2>
-                    <p>I tasti sono leggermente concavi, ben distanziati e con una corsa corta ma precisa.</p>
-                    <p>Dopo diverse ore di utilizzo, la tastiera risulta molto confortevole e non affatica le mani.</p>
-                    <p>La retroilluminazione si attiva automaticamente e si adatta alla luce ambientale.</p>
-                </section>
-
-                <!-- DESIGN -->
-                <section id="design">
-                    <h2>Qualità costruttiva e design</h2>
-                    <p>Struttura solida, stabile e design minimal professionale.</p>
-                </section>
-
-                <!-- CONNESSIONE -->
-                <section id="connessione">
-                    <h2>Connessione e compatibilità</h2>
-                    <p>Wireless stabile via Bluetooth o ricevitore Logitech. Supporta più dispositivi.</p>
-                </section>
-
-                <!-- BATTERIA -->
-                <section id="batteria">
-                    <h2>Autonomia della batteria</h2>
-                    <p>Dura settimane con uso normale. Ricarica USB-C veloce.</p>
                 </section>
 
                 <!-- PRO CONTRO -->
@@ -91,25 +64,54 @@
 
                     <h3>Pro</h3>
                     <ul>
-                        <li>Digitazione comoda e silenziosa</li>
-                        <li>Ottima qualità costruttiva</li>
-                        <li>Batteria lunga durata</li>
+                        <li>Non fa rumore → puoi scrivere anche di notte</li>
+                        <li>Telaio pesante, non si muove nemmeno se scrivi forte</li>
+                        <li>Illuminazione intelligente (si accende quando avvicini le mani)</li>
+                        <li>Passi da PC a tablet in un secondo</li>
+                        <li>COmpletamente personalizzabile usando l'app ufficiale Logi Options+</li>
                     </ul>
 
                     <h3>Contro</h3>
                     <ul>
-                        <li>Prezzo non basso</li>
-                        <li>Non adatta al gaming</li>
+                        <li>Non dà soddisfazione tattile tipo tastiera meccanica</li>
+                        <li>Con illuminazione attiva la carichi spesso</li>
+                        <li>Prezzo non economico</li>
                     </ul>
+                </section>
+
+                <!-- ESPERIENZA -->
+                <section id="esperienza-uso">
+                    <h2>Esperienza di uso quotidiana</h2>
+                    <p>Dopo qualche ora ti dimentichi di star usando una tastiera esterna.</p>
+                    <p>È molto simile a scrivere su un portatile, ma più stabile e precisa.</p>
+                    <p>Se vieni da una meccanica, all’inizio sembra “troppo morbida”, poi capisci che affatica meno.</p>
+                </section>
+
+                <!-- NELLA VITA REALE -->
+                <section id="nella-vita-reale">
+                    <h2>Dettagli tecnici</h2>
+                    <ul>
+                        <li>autonomia reale</li>
+                        <li>connessione</li>
+                        <li>dispositivi multipli</li>
+                        <li>retroilluminazione</li>
+                    </ul>
+                </section>
+
+                <!-- CONFRONTO -->
+                <section id="confronto">
+                    <h2>Confronto</h2>
+                    <p>Rispetto a una meccanica: più comoda, meno coinvolgente.</p>
+                    <p>Rispetto a tastiere economiche: molto più stabile e responsiva.</p>
                 </section>
 
                 <!-- CONCLUSIONI -->
                 <section id="conclusioni">
                     <h2>Considerazioni finali</h2>
                     <p>
-                        Ottima tastiera da produttività per chi scrive molte ore.
-                        Punta su comfort e affidabilità più che su gaming.
+                        Se passi molte ore al computer e vuoi una tastiera che non stanchi, è una delle migliori scelte.
                     </p>
+                    <p>Se invece cerchi divertimento o gaming, meglio altro.</p>
                 </section>
             </article>
         </main>
