modify content of logitech-mx-keys-s.html file

--- a/logitech-mx-keys-s.html
+++ b/logitech-mx-keys-s.html
@@ -34,8 +34,11 @@
                 <section id="introduzione">
                     <h2>Introduzione</h2>
                     <p>
-                        La Logitech MX Keys S è una tastiera pensata chiaramente per chi lavora molte ore al computer.
+                        La Logitech MX Keys S è una tastiera pensata per chi lavora molte ore al computer.
                         Non nasce per il gaming estremo, ma per produttività, scrittura, programmazione e uso quotidiano intenso.
+                    </p>
+                    <p>
+                        In questa recensione scopriremo pregi, difetti e tutto ciò che devi sapere prima di acquistarla.
                     </p>
                 </section>
 
@@ -43,18 +46,20 @@
                 <section id="a-chi-e-adatta">
                     <h2>A chi è adatta (e a chi no)</h2>
 
-                    <h3>A chi è consigliata</h3>
+                    <p>Scopri subito se la Logitech MX Keys S è la tastiera giusta per te o se potresti voler considerare alternative:</p>
+
+                    <h3>Consigliata se:</h3>
                     <ul>
                         <li>lavori/studi al PC molte ore</li>
                         <li>vuoi scrivere comodo e silenzioso</li>
-                        <li>preferisci feeling tipo laptop</li>
+                        <li>preferisci la sensazione laptop</li>
                     </ul>
 
-                    <h3>A chi NON è consigliata:</h3>
+                    <h3>NON consigliata se:</h3>
                     <ul>
-                        <li>vuoi feedback meccanico</li>
-                        <li>gaming competitivo</li>
-                        <li>budget basso</li>
+                        <li>vuoi un feedback meccanico</li>
+                        <li>fai gaming competitivo</li>
+                        <li>hai un budget limitato</li>
                     </ul>
                 </section>
 
@@ -62,13 +67,15 @@
                 <section id="pro-contro">
                     <h2>Pro e Contro</h2>
 
+                    <p>Ecco i principali punti di forza e le criticità della Logitech MX Keys S, così puoi avere subito un’idea chiara del prodotto:</p>
+
                     <h3>Pro</h3>
                     <ul>
                         <li>Non fa rumore → puoi scrivere anche di notte</li>
                         <li>Telaio pesante, non si muove nemmeno se scrivi forte</li>
                         <li>Illuminazione intelligente (si accende quando avvicini le mani)</li>
                         <li>Passi da PC a tablet in un secondo</li>
-                        <li>COmpletamente personalizzabile usando l'app ufficiale Logi Options+</li>
+                        <li>Completamente personalizzabile usando l'app ufficiale Logi Options+</li>
                     </ul>
 
                     <h3>Contro</h3>
@@ -82,36 +89,43 @@
                 <!-- ESPERIENZA -->
                 <section id="esperienza-uso">
                     <h2>Esperienza di uso quotidiana</h2>
-                    <p>Dopo qualche ora ti dimentichi di star usando una tastiera esterna.</p>
-                    <p>È molto simile a scrivere su un portatile, ma più stabile e precisa.</p>
-                    <p>Se vieni da una meccanica, all’inizio sembra “troppo morbida”, poi capisci che affatica meno.</p>
+                    <p>Usando la Logitech MX Keys S per alcune ore, ti dimentichi di star usando una tastiera esterna: è stabile, precisa e molto simile a scrivere su un portatile.</p>
+                    <p>Se vieni da una tastiera meccanica, all’inizio potrebbe sembrare “troppo morbida”, ma presto ti accorgi che affatica meno durante le lunghe sessioni di scrittura.</p>
                 </section>
 
                 <!-- NELLA VITA REALE -->
                 <section id="nella-vita-reale">
                     <h2>Dettagli tecnici</h2>
                     <ul>
-                        <li>autonomia reale</li>
-                        <li>connessione</li>
+                        <li>autonomia di poco superiore a 5 mesi senza retroilluminazione, una decina di giorni con</li>
+                        <li>connessione bluetooth con dongle o senza</li>
                         <li>dispositivi multipli</li>
-                        <li>retroilluminazione</li>
+                        <li>collegamento fino a 3 dispositivi</li>
                     </ul>
+                    <p>L’autonomia della Logitech MX Keys S è notevole: supera i cinque mesi se non usi la retroilluminazione, mentre con i LED attivi dura circa una decina di giorni.</p>
+                    <p>Puoi collegarla via Bluetooth o tramite il dongle Logi Bolt incluso nella confezione, con connessione stabile e rapida.</p>
+                    <p>La tastiera supporta fino a tre dispositivi contemporaneamente, permettendoti di passare facilmente da PC a tablet o laptop usando i tasti Easy Switch.</p>
                 </section>
 
                 <!-- CONFRONTO -->
                 <section id="confronto">
                     <h2>Confronto</h2>
-                    <p>Rispetto a una meccanica: più comoda, meno coinvolgente.</p>
-                    <p>Rispetto a tastiere economiche: molto più stabile e responsiva.</p>
+                    <p>Rispetto a una tastiera meccanica: la MX Keys S è più comoda e silenziosa, ma meno coinvolgente per chi ama il feedback tattile dei tasti.</p>
+                    <p>Rispetto a tastiere economiche: offre maggiore stabilità, precisione e una costruzione più solida, ideale per l’uso quotidiano intenso.</p>
                 </section>
 
                 <!-- CONCLUSIONI -->
                 <section id="conclusioni">
                     <h2>Considerazioni finali</h2>
                     <p>
-                        Se passi molte ore al computer e vuoi una tastiera che non stanchi, è una delle migliori scelte.
+                        Se passi molte ore al computer e vuoi una tastiera che non affatichi le mani e sia silenziosa, la MX Keys S è una delle migliori scelte sul mercato.
                     </p>
-                    <p>Se invece cerchi divertimento o gaming, meglio altro.</p>
+                    <p>
+                        Se invece cerchi una tastiera per gaming competitivo o un'esperienza più “tattile”, potresti considerare alternative meccaniche.
+                    </p>
+                    <p>
+                        In sintesi: ottima per produttività e lavoro creativo, meno indicata per il gaming.
+                    </p>
                 </section>
             </article>
         </main>
